Massive targeting improvements, localize Focus Core, start Disruption work

--- a/src/main/resources/assets/magicarsenal/lang/en_US.lang
+++ b/src/main/resources/assets/magicarsenal/lang/en_US.lang
@@ -1,6 +1,7 @@
 itemGroup.magicarsenal=Magic Arsenal
 
 #Ingredients
+item.magicarsenal.ingredient.focus_core.name=Spell Focus Core
 
 #Spell Focus Items
 item.magicarsenal.spellfocus.name=Unattuned Spell Focus
