--- a/src/main/resources/assets/magicarsenal/lang/en_US.lang
+++ b/src/main/resources/assets/magicarsenal/lang/en_US.lang
@@ -18,14 +18,17 @@ item.magicarsenal.spellfocus.frost_shards.name=Frost Shards Spell Focus
 item.magicarsenal.spellfocus.will_o_wisp.name=Will O' Wisp Spell Focus
 item.magicarsenal.spellfocus.chain_lightning.name=Chain Lightning Spell Focus
 
+#Spell Baubles
+item.magicarsenal.spellbauble.gravity_mantle.name=Gravity Mantle
+
 #Spell Damage Sources
-death.attack.spell.drain_life=%1$s wasted away.
+death.attack.spell.drainLife=%1$s wasted away.
 death.attack.spell.oblation=%1$s was too generous with their life essence.
 death.attack.spell.disruption=%1$s was vaporized by a disruptor beam.
-death.attack.spell.magmablast=%1$s was shredded by molten rock.
-death.attack.spell.frostshards=%1$s was pierced by razor-sharp ice.
-death.attack.spell.willowisp=%1$s walked into the light.
-death.attack.spell.chainlightning=%1$s has discovered electricity.
+death.attack.spell.magmaBlast=%1$s was shredded by molten rock.
+death.attack.spell.frostShards=%1$s was pierced by razor-sharp ice.
+death.attack.spell.willOWisp=%1$s walked into the light.
+death.attack.spell.chainLightning=%1$s has discovered electricity.
 
 #Potion Effects
 
