--- a/src/main/resources/assets/magicarsenal/lang/en_US.lang
+++ b/src/main/resources/assets/magicarsenal/lang/en_US.lang
@@ -27,25 +27,26 @@ item.magicarsenal.spellbauble.gravity_mantle.name=Gravity Mantle
 
 #Blocks
 tile.magicarsenal.runestone.name=Runestone
+tile.magicarsenal.rosettastone.name=Rosetta Stone
 tile.magicarsenal.altar.name=Runic Altar
 tile.magicarsenal.stele.uncarved.name=Uncarved Stele
 tile.magicarsenal.stele.raidho.name=Raidho Stele
 tile.magicarsenal.stele.kenaz.name=Kenaz Stele
 
 #Spell Damage Sources
-death.attack.spell.drainLife=%s wasted away.
-death.attack.spell.oblation=%s was too generous with their life essence.
-death.attack.spell.disruption=%s was vaporized by a disruptor beam.
-death.attack.spell.magmaBlast=%s was shredded by molten rock.
-death.attack.spell.frostShards=%s was pierced by razor-sharp ice.
-death.attack.spell.willOWisp=%1$s walked into the light.
-death.attack.spell.chainLightning=%s has discovered electricity.
+death.attack.spell.drainLife=%s wasted away
+death.attack.spell.oblation=%s was too generous with their life essence
+death.attack.spell.disruption=%s was vaporized by a disruptor beam
+death.attack.spell.magmaBlast=%s was shredded by molten rock
+death.attack.spell.frostShards=%s was pierced by razor-sharp ice
+death.attack.spell.willOWisp=%1$s walked into the light
+death.attack.spell.chainLightning=%s has discovered electricity
 death.attack.magicarsenal.wolfsbane=%s succumbed to wolfsbane poison
 death.attack.magicarsenal.nightshade=%s succumbed to nightshade poison
+death.attack.magicarsenal.infuselife=%s was unmade by healing energy
 
 #Potion Effects
 effect.magicarsenal.wolfsbane=Wolfsbane
-
 potion.effect.wolfsbane.1=Wolfsbane Poison
 potion.effect.wolfsbane.2=Strong Wolfsbane Poison
 potion.effect.wolfsbane.3=Dangerously Strong Wolfsbane Poison
@@ -60,7 +61,6 @@ tipped_arrow.effect.wolfsbane.2=Strong Wolfsbane-Tipped Arrow
 tipped_arrow.effect.wolfsbane.3=Dangerously Strong Wolfsbane-Tipped Arrow
 
 effect.magicarsenal.nightshade=Nightshade
-
 potion.effect.nightshade.1=Nightshade Poison
 potion.effect.nightshade.2=Deadly Nightshade Poison
 potion.effect.nightshade.3=Extremely Deadly Nightshade Poison
@@ -73,6 +73,8 @@ lingering_potion.effect.nightshade.3=Extremely Deadly Lingering Nightshade Poiso
 tipped_arrow.effect.nightshade.1=Nightshade-Tipped Arrow
 tipped_arrow.effect.nightshade.2=Deadly Nightshade-Tipped Arrow
 tipped_arrow.effect.nightshade.3=Extremely Deadly Nightshade-Tipped Arrow
+
+effect.magicarsenal.infuselife=Infuse Life
 
 #Info Pages
 info.magicarsenal.label.spell=§lSpell: §r%1$s
@@ -89,6 +91,8 @@ info.magicarsenal.element.undeath=Undeath
 info.magicarsenal.element.holy=Holy
 info.magicarsenal.element.arcane=Arcane
 info.magicarsenal.element.chaos=Chaos
+
+info.magicarsenal.rosettastone=Concentrated, ossified arcane knowledge. Provides 12 levels for an enchanting table, and emits a cold, unearthly glow.
 
 #Probe Data
 info.magicarsenal.radiance.name=Radiance
