--- a/src/main/resources/assets/magicarsenal/lang/en_US.lang
+++ b/src/main/resources/assets/magicarsenal/lang/en_US.lang
@@ -92,6 +92,8 @@ info.magicarsenal.element.holy=Holy
 info.magicarsenal.element.arcane=Arcane
 info.magicarsenal.element.chaos=Chaos
 
+info.magicarsenal.altar=When Radiance is channeled onto this altar from carved Stele, powerful magical items become craftable here.
+info.magicarsenal.stele.uncarved=Even though this Stele is uncarved, placing it next to a carved Stele may increase its range and efficiency.
 info.magicarsenal.rosettastone=Concentrated, ossified arcane knowledge. Provides 12 levels for an enchanting table, and emits a cold, unearthly glow.
 
 #Probe Data
