Fix serious bug causing stele to consume more EMC than they need, add Simple Chisel

--- a/src/main/resources/assets/magicarsenal/lang/en_US.lang
+++ b/src/main/resources/assets/magicarsenal/lang/en_US.lang
@@ -9,7 +9,9 @@ item.magicarsenal.ingredient.portal_seared_tome.name=Portal-Seared Tome
 item.magicarsenal.root.wolfsbane.name=Wolfsbane Root
 item.magicarsenal.root.nightshade.name=Nightshade Root
 
+#Important Tools
 item.magicarsenal.codex.name=Portal-Seared Codex
+item.magicarsenal.chisel.name=Simple Chisel
 
 #Spell Focus Items
 item.magicarsenal.spellfocus.name=%s Spell Focus
